fix: styling node and sockets

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,4 +1,5 @@
 :host {
+  --font-family-node-header: var(--fbp-font-family-node-header, courier,arial,helvetica);
   display: flex;
   position: relative;
 }
