--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,9 +1,24 @@
-<fbp-node-header></fbp-node-header>
 
-<fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections>
+<ng-container *ngIf="node">
+  <!-- <fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections> -->
 
-<fbp-sockets class="left-sockets"></fbp-sockets>
-<slot></slot>
-<fbp-sockets class="right-sockets"></fbp-sockets>
+  <section [ngClass]="cls">
+    <fbp-sockets [sockets]="node.sockets" position="top" class="left-sockets"></fbp-sockets>
+    <fbp-sockets [sockets]="node.sockets" position="right" class="left-sockets"></fbp-sockets>
+    <fbp-sockets [sockets]="node.sockets" position="bottom" class="left-sockets"></fbp-sockets>
+    <fbp-sockets [sockets]="node.sockets" position="left" class="left-sockets"></fbp-sockets>
 
-<fbp-footer></fbp-footer>
+    <div position="top"></div>
+
+    <div class="content">
+      <!-- <header>{{node.title}}</header> -->
+      <slot></slot>
+    </div>
+  </section>
+
+  <fbp-footer></fbp-footer>
+
+  <div class="header-wrapper">
+    <header>{{node.title}}</header>
+  </div>
+</ng-container>
