--- a/src/app/components/sockets/sockets.component.html
+++ b/src/app/components/sockets/sockets.component.html
@@ -1,3 +1,5 @@
 <ol [ngClass]="position">
-  <li *ngFor="let socket of sockets"></li>
+  <li *ngFor="let socket of sockets">
+    <fbp-socket></fbp-socket>
+  </li>
 </ol>
