fix: merge main into node

--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -15,7 +15,7 @@
   // }
 
   & > section {
-    // background-color: grey;
+    background-color: var(--fbp-node-bg, #000);
     border: 2px solid grey;
     border-radius: 5px;
     display: grid;
@@ -35,6 +35,15 @@
     // grid-template-rows: 0 minmax(100px, auto) 0;
     // }
   }
+}
+
+:host(.fbp-full-size) {
+	position: relative;
+
+	& > section {
+		min-height: 100%;
+		height: 100%;
+	}
 }
 
 fbp-sockets {
