--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,25 +1,24 @@
+<ng-container *ngIf="node || isRootNode">
+	<!-- <fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections> -->
+	<fbp-socket style="display:none"></fbp-socket>
 
-<ng-container *ngIf="node">
-  <!-- <fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections> -->
-  <fbp-socket style="display:none"></fbp-socket>
+	<section [ngClass]="cls">
+		<fbp-sockets [sockets]="node.sockets" position="top" class="left-sockets"></fbp-sockets>
+		<fbp-sockets [sockets]="node.sockets" position="right" class="left-sockets"></fbp-sockets>
+		<fbp-sockets [sockets]="node.sockets" position="bottom" class="left-sockets"></fbp-sockets>
+		<fbp-sockets [sockets]="node.sockets" position="left" class="left-sockets"></fbp-sockets>
 
-  <section [ngClass]="cls">
-    <fbp-sockets [sockets]="node.sockets" position="top" class="left-sockets"></fbp-sockets>
-    <fbp-sockets [sockets]="node.sockets" position="right" class="left-sockets"></fbp-sockets>
-    <fbp-sockets [sockets]="node.sockets" position="bottom" class="left-sockets"></fbp-sockets>
-    <fbp-sockets [sockets]="node.sockets" position="left" class="left-sockets"></fbp-sockets>
+		<div position="top"></div>
 
-    <div position="top"></div>
+		<div class="content">
+			<!-- <header>{{node.title}}</header> -->
+			<slot></slot>
+		</div>
+	</section>
 
-    <div class="content">
-      <!-- <header>{{node.title}}</header> -->
-      <slot></slot>
-    </div>
-  </section>
+	<fbp-footer></fbp-footer>
 
-  <fbp-footer></fbp-footer>
-
-  <div class="header-wrapper">
-    <header>{{node.title}}</header>
-  </div>
+	<div class="header-wrapper">
+		<header>{{node.title}}</header>
+	</div>
 </ng-container>
