--- a/src/app/components/node/node.component.scss
+++ b/src/app/components/node/node.component.scss
@@ -111,7 +111,7 @@ fbp-sockets {
   position: relative;
   margin-top: 8px;
   font-family: var(--font-family-node-header);
-
+  user-select: none;
 
   header {
     position: absolute;
