fix: refactor WIP

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,5 +1,9 @@
 :host {
-  --font-family-node-header: var(--fbp-font-family-node-header, courier,arial,helvetica);
-  display: flex;
-  position: relative;
+    --font-family-node-header: var(--fbp-font-family-node-header, courier, arial, helvetica);
+    display: flex;
+    position: relative;
 }
+
+// ::ng-deep * {
+//     -webkit-touch-callout: none !important;
+// }
