--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,3 +1,4 @@
+ <div #target>test</div>
 <ng-container *ngIf="node">
 	<!-- <fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections> -->
 	<fbp-socket #socketGost style="display:none"></fbp-socket>
