--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,5 +1,4 @@
- <div #target>test</div>
-<ng-container *ngIf="node">
+<ng-container>
 	<!-- <fbp-connections *ngIf="connections" [parentId]="id"></fbp-connections> -->
 	<fbp-socket #socketGost style="display:none"></fbp-socket>
 
@@ -13,15 +12,15 @@
 		<fbp-sockets [nodeId]="id" [sockets]="sockets | socket:socketPositions.LEFT"
 			position="left" class="left-sockets"></fbp-sockets>
 
-		<div class="content">
+		<div #content class="content">
 			<!-- <header>{{node.title}}</header> -->
-			<slot (slotchange)="onContentChange($event)"></slot>
+            <slot (slotchange)="onContentChange($event)"></slot>
 		</div>
 	</section>
 
 	<!-- <fbp-footer></fbp-footer> -->
 
 	<div class="header-wrapper">
-		<header>{{node?.title}}</header>
+		<header>{{title}}</header>
 	</div>
 </ng-container>
